# mcp-test

ai-agent-app/: .gitignore  .pre-commit-config.yaml  README.md  code-assessment.md  pyproject.toml
ai-agent-app/docs/development/: setup-guide.md
ai-agent-app/env-templates/: env.development
ai-agent-app/scripts/: format.py  lint.py  migrate_database.py  setup.py  test.py
ai-agent-app/src/ai_agent/: main.py
ai-agent-app/src/ai_agent/api/: dependencies.py  middleware.py  rate_limiting.py
ai-agent-app/src/ai_agent/api/websocket/: auth.py  connection_manager.py  endpoints.py  message_queue.py
ai-agent-app/src/ai_agent/config/: settings.py
ai-agent-app/src/ai_agent/core/agents/: service.py
ai-agent-app/src/ai_agent/infrastructure/database/: memory.py  postgresql.py  redis.py
ai-agent-app/src/ai_agent/infrastructure/llm/: anthropic_client.py  base.py  factory.py  google_client.py  openai_client.py
ai-agent-app/src/ai_agent/infrastructure/mcp/: protocol.py  server_manager.py
ai-agent-app/src/ai_agent/resilience/circuit_breaker/: breaker.py
ai-agent-app/src/ai_agent/security/: auth.py  validation.py
ai-agent-app/tests/unit/test_resilience/: test_circuit_breaker.py  test_health.py  test_retry.py
ai-agent-app/tests/unit/test_security/: test_auth.py  test_validation.py
